--- a/FineWork.html
+++ b/FineWork.html
@@ -43,7 +43,7 @@
     ".replace(/gascript/g, 'script'));
     }
     </script></head>
-  <body class="u-body u-xl-mode"><header class="u-clearfix u-grey-70 u-header u-header" id="sec-c15b"><div class="u-clearfix u-sheet u-valign-middle-sm u-valign-middle-xs u-sheet-1">
+  <body class="u-body u-xl-mode"><header class="u-clearfix u-grey-70 u-header u-header" id="sec-c15b"><div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-sheet-1">
         <p class="u-enable-responsive u-text u-text-default u-text-1">
           <a class="u-btn u-button-link u-button-style u-none u-text-body-alt-color u-btn-1" href="Сборки-от-Аддерли.html" data-page-id="25875748">Сборки от Аддерли</a>
         </p>
@@ -107,6 +107,9 @@
         <a href="https://finework.tk/Product/FineWork-Type-Pro.html" class="u-btn u-btn-round u-button-style u-hover-palette-1-light-1 u-palette-1-base u-radius-50 u-btn-2">FineWork Type PRO</a>
         <a href="https://finework.tk/%D0%9F%D1%80%D0%B8%D0%BB%D0%BE%D0%B6%D0%B5%D0%BD%D0%B8%D1%8F.html" class="u-btn u-btn-round u-button-style u-hover-palette-1-light-1 u-palette-1-base u-radius-50 u-btn-3">FineWork Приложения</a>
         <a href="https://finework.tk/%D0%98%D0%B3%D1%80%D1%8B.html" class="u-btn u-btn-round u-button-style u-hover-palette-1-light-1 u-palette-1-base u-radius-50 u-btn-4">FineWork Игры</a>
+        <a href="https://t.me/finework" class="u-btn u-btn-round u-button-style u-radius-50 u-btn-5">Telegram канал моей компании</a>
+        <a href="https://www.youtube.com/channel/UCeb6IN4z_B1qYA7CKouMIrQ" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-5 u-radius-50 u-btn-6">YouTube канал моей компании</a>
+        <a href="https://www.donationalerts.com/r/finework" class="u-border-none u-btn u-btn-round u-button-style u-palette-3-base u-radius-50 u-btn-7">Поддержать меня и FineWork</a>
         <p class="u-text u-text-2">FineWork 2022</p>
       </div>
     </section>
