--- a/Windows-8-0-сборки.html
+++ b/Windows-8-0-сборки.html
@@ -43,7 +43,7 @@
     ".replace(/gascript/g, 'script'));
     }
     </script></head>
-  <body class="u-body u-xl-mode"><header class="u-clearfix u-grey-70 u-header u-header" id="sec-c15b"><div class="u-clearfix u-sheet u-valign-middle-sm u-valign-middle-xs u-sheet-1">
+  <body class="u-body u-xl-mode"><header class="u-clearfix u-grey-70 u-header u-header" id="sec-c15b"><div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-sheet-1">
         <p class="u-enable-responsive u-text u-text-default u-text-1">
           <a class="u-btn u-button-link u-button-style u-none u-text-body-alt-color u-btn-1" href="Сборки-от-Аддерли.html" data-page-id="25875748">Сборки от Аддерли</a>
         </p>
@@ -103,18 +103,18 @@
       <div class="u-clearfix u-sheet u-sheet-1">
         <h1 class="u-text u-text-default u-text-1">Сборки Windows 8.0<br>
         </h1>
-        <h6 class="u-text u-text-default u-text-2">Windows 8.0 V2 by Adderly (23-24.06.2022)<br>
+        <h6 class="u-text u-text-default u-text-2">Windows 8.0 V2 by Adderly (23.06.2022)<br>
         </h6>
-        <h1 class="u-text u-text-default u-text-3">В процессе...</h1>
+        <h1 class="u-text u-text-default u-text-3">Уже совсем скоро!</h1>
         <p class="u-text u-text-default u-text-4"> Сборка обновлена до последних обновлений, актуальных на Июнь 2022 года.<br>
           <br>Добавлена папка KMS <br>
-          <br>Добавлена папка "от Марка Аддерли" в которой находятся инсталяторы самых нужных и авторских программ <br>
+          <br>Добавлена папка "от Марка Аддерли" в которой находятся инсталяторы самых нужных программ <br>
           <br>Интегрирован Framework 4.6<br>
           <br>Интегрированы Microsoft Visual C++ Redistributable 2005, 2008, 2010, 2012, 2013, 2015 - 2022. x86 и, x64 <br>
-          <br>Добавлены темы "Архитектура, Персонажи, Лашдафты" из Windows 7 <br>
-          <br>Добавлены темы с обоями рабочего стола из Windows Vista, 7, 8.1, 10 <br>
+          <br>Добавлены темы "Архитектура, Персонажи, Лашдафт" из Windows 7 <br>
+          <br>Добавлены темы с обоями рабочего стола из Windows Vista, 7, 8.1, 10, 11<br>
           <br>Добавлены темы с обоями из экрана блокировки Windows 8 и Windows 10 <br>
-          <br>Добавлен диспетчер задач в ПКМ по рабочему столу <br>
+          <br>Добавлен диспетчер задач в ПКМ по рабочему столу (по желанию можно отключить)<br>
           <br>Образ весит X.XX GB, после установки Windows занимает XX GB. <br>
           <br>Образ основан на официальном MSDN Windows 8.0.
         </p>
