--- a/Софт-от-Аддерли.html
+++ b/Софт-от-Аддерли.html
@@ -43,7 +43,7 @@
     ".replace(/gascript/g, 'script'));
     }
     </script></head>
-  <body class="u-body u-xl-mode"><header class="u-clearfix u-grey-70 u-header u-header" id="sec-c15b"><div class="u-clearfix u-sheet u-valign-middle-sm u-valign-middle-xs u-sheet-1">
+  <body class="u-body u-xl-mode"><header class="u-clearfix u-grey-70 u-header u-header" id="sec-c15b"><div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-sheet-1">
         <p class="u-enable-responsive u-text u-text-default u-text-1">
           <a class="u-btn u-button-link u-button-style u-none u-text-body-alt-color u-btn-1" href="Сборки-от-Аддерли.html" data-page-id="25875748">Сборки от Аддерли</a>
         </p>
@@ -124,6 +124,8 @@
         <a href="https://drive.google.com/file/d/1SqzFt8013bQbyvy576Tj4h-v5P6Lqrcg/view?usp=sharing" class="u-border-none u-btn u-button-style u-grey-70 u-hover-grey-50 u-btn-17">uTorrent Pro</a>
         <a href="https://drive.google.com/file/d/1uaX1XAuYq6SLEMLmU9ZDo79ce6stDlKj/view?usp=sharing" class="u-border-none u-btn u-button-style u-grey-70 u-hover-grey-50 u-btn-18">UltraISO Premium</a>
         <a href="https://drive.google.com/file/d/1WE7UQCKkDAAskluf59fvCwABEZMUaodO/view?usp=sharing" class="u-border-none u-btn u-button-style u-grey-70 u-hover-grey-50 u-btn-19">Visual Studio 2022</a>
+        <h5 class="u-align-center u-text u-text-2">Все что здесь на странице, находится так же в открытом доступе в Интернете.<br>Автор этих репаков, не автор сайта!
+        </h5>
       </div>
     </section>
     
