--- a/Windows-11-сборки.html
+++ b/Windows-11-сборки.html
@@ -103,7 +103,8 @@
       <div class="u-clearfix u-sheet u-sheet-1">
         <h1 class="u-text u-text-default u-text-1">Сборки Windows 11<br>
         </h1>
-        <h1 class="u-text u-text-default u-text-2">Скоро...</h1>
+        <h1 class="u-align-center u-text u-text-default u-text-2">Скоро...<br>Уже в планах на эту неделю!
+        </h1>
         <p class="u-text u-text-default u-text-3">Смотрите так же:</p>
         <a href="Windows-10-сборки.html" data-page-id="479509282" class="u-btn u-button-style u-btn-1">Сборки Windows 10</a>
         <a href="Windows-8-1-сборки.html" data-page-id="284724531" class="u-btn u-button-style u-btn-2">Сборки Windows 8.1</a>
