--- a/Софт-от-Аддерли.html
+++ b/Софт-от-Аддерли.html
@@ -103,9 +103,9 @@
       <div class="u-clearfix u-sheet u-sheet-1">
         <h4 class="u-align-center-xl u-text u-text-1">Зачастую скачивание софта является проблемой в наше время, особенно Pro версий программ.<br>Либо сложно найти, либо где то могут быть вирусы, поэтому я решил с вами поделиться!&nbsp;
         </h4>
-        <a href="https://github.com/FineWorkCompany/sborkiadderly.github.io/raw/gh-pages/soft/2015-2022%2064.exe" class="u-border-none u-btn u-button-style u-grey-70 u-hover-grey-50 u-btn-1">Microsoft Visual C++ Redistributable<br>2015 - 2022 x64
+        <a href="https://github.com/FineWorkCompany/sborkiadderly.github.io/raw/gh-pages/soft/2015-2022%2086.exe" class="u-border-none u-btn u-button-style u-grey-70 u-hover-grey-50 u-btn-1">Microsoft Visual C++ Redistributable<br>2015 - 2022 x32
         </a>
-        <a href="https://github.com/FineWorkCompany/sborkiadderly.github.io/raw/gh-pages/soft/2015-2022%2086.exe" class="u-border-none u-btn u-button-style u-grey-70 u-hover-grey-50 u-btn-2">Microsoft Visual C++ Redistributable<br>2015 - 2022 x32
+        <a href="https://github.com/FineWorkCompany/sborkiadderly.github.io/raw/gh-pages/soft/2015-2022%2064.exe" class="u-border-none u-btn u-button-style u-grey-70 u-hover-grey-50 u-btn-2">Microsoft Visual C++ Redistributable<br>2015 - 2022 x64
         </a>
         <a href="https://github.com/FineWorkCompany/sborkiadderly.github.io/raw/gh-pages/soft/ndp472-kb4054531-web.exe" class="u-border-none u-btn u-button-style u-grey-70 u-hover-grey-50 u-btn-3">NET.Framework 4.7.2</a>
         <a href="https://github.com/FineWorkCompany/sborkiadderly.github.io/raw/gh-pages/soft/NDP46-KB3045560-Web.exe" class="u-border-none u-btn u-button-style u-grey-70 u-hover-grey-50 u-btn-4">NET.Framework 4.6</a>
@@ -124,7 +124,8 @@
         <a href="https://drive.google.com/file/d/1SqzFt8013bQbyvy576Tj4h-v5P6Lqrcg/view?usp=sharing" class="u-border-none u-btn u-button-style u-grey-70 u-hover-grey-50 u-btn-17">uTorrent Pro</a>
         <a href="https://drive.google.com/file/d/1uaX1XAuYq6SLEMLmU9ZDo79ce6stDlKj/view?usp=sharing" class="u-border-none u-btn u-button-style u-grey-70 u-hover-grey-50 u-btn-18">UltraISO Premium</a>
         <a href="https://drive.google.com/file/d/1WE7UQCKkDAAskluf59fvCwABEZMUaodO/view?usp=sharing" class="u-border-none u-btn u-button-style u-grey-70 u-hover-grey-50 u-btn-19">Visual Studio 2022</a>
-        <h5 class="u-align-center u-text u-text-2">Все что здесь на странице, находится так же в открытом доступе в Интернете.<br>Автор этих репаков, не автор сайта!
+        <h2 class="u-align-center-xl u-text u-text-2">Скоро еще больше репаков...</h2>
+        <h5 class="u-align-center-xl u-text u-text-3">Все что здесь на странице, находится так же в открытом доступе в Интернете.<br>Автор этих репаков, не автор сайта!
         </h5>
       </div>
     </section>
