--- a/Windows-8-0-сборки.html
+++ b/Windows-8-0-сборки.html
@@ -99,14 +99,19 @@
           </div>
         </nav>
       </div></header>
-    <section class="u-clearfix u-grey-90 u-section-1" id="sec-0039">
-      <div class="u-clearfix u-sheet u-sheet-1">
+    <section class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-clearfix u-grey-90 u-section-1" id="sec-0039">
+      <div class="u-clearfix u-sheet u-valign-middle-xs u-sheet-1">
         <h1 class="u-text u-text-default u-text-1">Сборки Windows 8.0<br>
         </h1>
         <h6 class="u-text u-text-default u-text-2">Windows 8.0 V2 by Adderly (23.06.2022)<br>
         </h6>
-        <h1 class="u-text u-text-default u-text-3">Уже совсем скоро!</h1>
-        <p class="u-text u-text-default u-text-4"> Сборка обновлена до последних обновлений, актуальных на Июнь 2022 года.<br>
+        <img class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-image u-image-default u-preserve-proportions u-image-1" src="images/Windows10x64-2022-06-23-19-19-38.png" alt="" data-image-width="1366" data-image-height="768">
+        <img class="u-image u-image-default u-preserve-proportions u-image-2" src="images/Windows10x64-2022-06-23-19-21-17.png" alt="" data-image-width="1366" data-image-height="768">
+        <img class="u-image u-image-default u-preserve-proportions u-image-3" src="images/Windows10x64-2022-06-23-19-20-55.png" alt="" data-image-width="1366" data-image-height="768">
+        <img class="u-image u-image-default u-preserve-proportions u-image-4" src="images/Windows10x64-2022-06-23-19-20-02.png" alt="" data-image-width="1366" data-image-height="768">
+        <img class="u-image u-image-default u-preserve-proportions u-image-5" src="images/Windows10x64-2022-06-23-19-19-47.png" alt="" data-image-width="1366" data-image-height="768">
+        <img class="u-image u-image-default u-preserve-proportions u-image-6" src="images/Windows10x64-2022-06-23-19-22-40.png" alt="" data-image-width="1366" data-image-height="768">
+        <p class="u-align-left-lg u-align-left-md u-align-left-sm u-align-left-xs u-text u-text-default u-text-3"> Сборка обновлена до последних обновлений, актуальных на Июнь 2022 года.<br>(Последние 30 обновлений можно установить по желанию)<br>
           <br>Добавлена папка KMS <br>
           <br>Добавлена папка "от Марка Аддерли" в которой находятся инсталяторы самых нужных программ <br>
           <br>Интегрирован Framework 4.6<br>
@@ -115,13 +120,15 @@
           <br>Добавлены темы с обоями рабочего стола из Windows Vista, 7, 8.1, 10, 11<br>
           <br>Добавлены темы с обоями из экрана блокировки Windows 8 и Windows 10 <br>
           <br>Добавлен диспетчер задач в ПКМ по рабочему столу (по желанию можно отключить)<br>
-          <br>Образ весит X.XX GB, после установки Windows занимает XX GB. <br>
+          <br>Образ весит 5.83 GB, после установки Windows занимает 17 GB. (Так как установлены почти все обновления)<br>
           <br>Образ основан на официальном MSDN Windows 8.0.
         </p>
-        <p class="u-text u-text-default u-text-5">Смотрите так же:</p>
-        <a href="Windows-10-сборки.html" data-page-id="479509282" class="u-btn u-button-style u-btn-1">Сборки Windows 10</a>
-        <a href="Windows-8-1-сборки.html" data-page-id="284724531" class="u-btn u-button-style u-btn-2">Сборки Windows 8.1</a>
-        <a href="Windows-7-сборки.html" data-page-id="95331361" class="u-btn u-button-style u-btn-3">Сборки Windows 7</a>
+        <a href="https://drive.google.com/file/d/1Z6vhjx2qBIkjqvnyAyKs1BJYzWfmdr1_/view?usp=sharing" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-hover-palette-2-base u-radius-50 u-btn-1">Скачать Windows 8.0 by Adderly</a>
+        <a href="https://www.mediafire.com/file/cuh34ijtc2se6iz/Windows+8.0+by+Adderly.iso/file" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-hover-black u-radius-50 u-btn-2">Альтернативная ссылка</a>
+        <p class="u-text u-text-default u-text-4">Смотрите так же:</p>
+        <a href="Windows-10-сборки.html" data-page-id="479509282" class="u-btn u-button-style u-btn-3">Сборки Windows 10</a>
+        <a href="Windows-8-1-сборки.html" data-page-id="284724531" class="u-btn u-button-style u-btn-4">Сборки Windows 8.1</a>
+        <a href="Windows-7-сборки.html" data-page-id="95331361" class="u-btn u-button-style u-btn-5">Сборки Windows 7</a>
       </div>
     </section>
     
