--- a/Сборки-от-Аддерли.html
+++ b/Сборки-от-Аддерли.html
@@ -106,27 +106,28 @@
           </span>
           <br>
         </h3>
-        <a href="Windows-Lite-сборки.html" data-page-id="1517191" class="u-border-none u-btn u-btn-round u-button-style u-palette-2-light-1 u-radius-50 u-btn-1">Windows Lite сборки</a>
-        <a href="Windows-7-сборки.html" data-page-id="95331361" class="u-border-none u-btn u-btn-round u-button-style u-palette-4-base u-radius-50 u-btn-2">Сборки Windows 7</a>
+        <a href="Windows-7-сборки.html" data-page-id="95331361" class="u-border-none u-btn u-btn-round u-button-style u-palette-4-base u-radius-50 u-btn-1">Сборки Windows 7</a>
+        <a href="Windows-Lite-сборки.html" data-page-id="1517191" class="u-border-none u-btn u-btn-round u-button-style u-palette-2-light-1 u-radius-50 u-btn-2">Windows Lite сборки</a>
         <a href="Windows-8-0-сборки.html" data-page-id="256727684" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-4 u-radius-50 u-btn-3">Сборки Windows 8.0</a>
         <a href="Windows-8-1-сборки.html" data-page-id="284724531" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-1 u-radius-50 u-btn-4">Сборки Windows 8.1</a>
         <a href="Windows-10-сборки.html" data-page-id="479509282" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-2 u-radius-50 u-btn-5">Сборки Windows 10</a>
         <a href="Windows-11-сборки.html" data-page-id="54493442" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-3 u-radius-50 u-btn-6">Сборки Windows 11</a>
-        <p class="u-text u-text-2">Попробовав мои сборки, вы измените мнение о том, что все сборки ужасны. </p>
-        <p class="u-text u-text-default u-text-3">Сайт новый, может содержать ошибки.</p>
-        <p class="u-text u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-text-4">Недавние новости</p>
-        <p class="u-text u-text-default u-text-5">Я создал сайт, в котором вы в любое время можете скачать мои сборки!</p>
-        <p class="u-text u-text-default u-text-6">В разработке:<br>Windows 8.0 by Adderly
+        <p class="u-text u-text-default u-text-2">Новинка</p>
+        <a href="Windows-8-0-сборки.html" data-page-id="256727684" class="u-btn u-button-style u-btn-7">Windows 8.0 by Adderly</a>
+        <p class="u-text u-text-3">Попробовав мои сборки, вы измените мнение о том,<br>что все сборки ужасны. 
         </p>
+        <p class="u-text u-text-default u-text-4">Сайт новый, может содержать ошибки.</p>
+        <p class="u-text u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-text-5">В разработке:</p>
+        <p class="u-text u-text-default u-text-6">Windows 11 by Adderly</p>
         <p class="u-text u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-text-7">Мои соц. сети</p>
-        <a href="https://t.me/adderlyev" class="u-border-none u-btn u-button-style u-btn-7">Личный блог в Telegram</a>
-        <a href="https://t.me/adderlywindows" class="u-btn u-button-style u-btn-8">Telegram канал, о сборках</a>
-        <a href="https://t.me/finework" class="u-btn u-button-style u-btn-9">Telegram канал моей компании</a>
-        <a href="https://www.youtube.com/channel/UCkZGHAAwJelXw_HgQ_kq0YQ?" class="u-border-none u-btn u-button-style u-custom-color-5 u-btn-10">Мой личный YouTube канал</a>
-        <a href="https://www.youtube.com/channel/UCeb6IN4z_B1qYA7CKouMIrQ" class="u-border-none u-btn u-button-style u-custom-color-5 u-btn-11">YouTube канал моей компании</a>
-        <a href="https://tiktok.com/@igroman255" class="u-black u-border-none u-btn u-button-style u-btn-12">Тик ток моего очень хорошего друга</a>
-        <a href="https://www.tiktok.com/@pepsya_kotya" class="u-black u-btn u-button-style u-btn-13">Мой личный TikTok</a>
-        <a href="https://www.donationalerts.com/r/finework" class="u-border-none u-btn u-button-style u-palette-3-base u-btn-14">Поддержать меня и FineWork</a>
+        <a href="https://t.me/adderlyev" class="u-border-none u-btn u-button-style u-btn-8">Личный блог в Telegram</a>
+        <a href="https://t.me/adderlywindows" class="u-btn u-button-style u-btn-9">Telegram канал, о сборках</a>
+        <a href="https://t.me/finework" class="u-btn u-button-style u-btn-10">Telegram канал моей компании</a>
+        <a href="https://www.youtube.com/channel/UCkZGHAAwJelXw_HgQ_kq0YQ?" class="u-border-none u-btn u-button-style u-custom-color-5 u-btn-11">Мой личный YouTube канал</a>
+        <a href="https://www.youtube.com/channel/UCeb6IN4z_B1qYA7CKouMIrQ" class="u-border-none u-btn u-button-style u-custom-color-5 u-btn-12">YouTube канал моей компании</a>
+        <a href="https://tiktok.com/@igroman255" class="u-black u-border-none u-btn u-button-style u-btn-13">Тик ток моего очень хорошего друга</a>
+        <a href="https://www.tiktok.com/@pepsya_kotya" class="u-black u-btn u-button-style u-btn-14">Мой личный TikTok</a>
+        <a href="https://www.donationalerts.com/r/finework" class="u-border-none u-btn u-button-style u-palette-3-base u-btn-15">Поддержать меня и FineWork</a>
       </div>
     </section>
     
