--- a/Windows-8-0-сборки.html
+++ b/Windows-8-0-сборки.html
@@ -111,7 +111,7 @@
         <img class="u-image u-image-default u-preserve-proportions u-image-4" src="images/Windows10x64-2022-06-23-19-20-02.png" alt="" data-image-width="1366" data-image-height="768">
         <img class="u-image u-image-default u-preserve-proportions u-image-5" src="images/Windows10x64-2022-06-23-19-19-47.png" alt="" data-image-width="1366" data-image-height="768">
         <img class="u-image u-image-default u-preserve-proportions u-image-6" src="images/Windows10x64-2022-06-23-19-22-40.png" alt="" data-image-width="1366" data-image-height="768">
-        <p class="u-align-left-lg u-align-left-md u-align-left-sm u-align-left-xs u-text u-text-default u-text-3"> Сборка обновлена до последних обновлений, актуальных на Июнь 2022 года.<br>(Последние 30 обновлений можно установить по желанию)<br>
+        <p class="u-text u-text-default u-text-3"> Сборка обновлена до последних обновлений, актуальных на Июнь 2022 года.<br>(Последние 30 обновлений можно установить по желанию)<br>
           <br>Добавлена папка KMS <br>
           <br>Добавлена папка "от Марка Аддерли" в которой находятся инсталяторы самых нужных программ <br>
           <br>Интегрирован Framework 4.6<br>
