--- a/Windows-10-сборки.html
+++ b/Windows-10-сборки.html
@@ -109,7 +109,7 @@
         <img class="u-image u-image-default u-image-2" src="images/photo_2022-06-21_21-47-42.jpg" alt="" data-image-width="1280" data-image-height="719">
         <img class="u-image u-image-default u-image-3" src="images/photo_2022-06-21_21-47-43.jpg" alt="" data-image-width="1280" data-image-height="719">
         <img class="u-image u-image-default u-image-4" src="images/photo_2022-06-21_21-47-411.jpg" alt="" data-image-width="1280" data-image-height="719">
-        <p class="u-text u-text-default u-text-3"> Добавлена папка "от Марка Аддерли", в которой находятся инсталяторы полезных и авторских программ, а так же рег файлы, чтобы редактировать проводник и вернуть старый просмотрщик фото. <br>А так же, чтобы отключать и включать обновления. <br>
+        <p class="u-text u-text-3"> Добавлена папка "от Марка Аддерли", в которой находятся инсталяторы полезных и авторских программ, а так же рег файлы, чтобы редактировать проводник и вернуть старый просмотрщик фото. <br>А так же, чтобы отключать и включать обновления. <br>
           <br>Удалены приложения "Zune Music, Ваш телефон, Карты, Центр отзывов, Камера, Скайп, Портал смешанной реальности, Люди, Microsoft Office, OneNote, Sticky Notes, Solitaire Collection, 3D Viewer, 3D Paint" <br>
           <br>Интегрированы Microsoft Visual Studio Redistributable 2005, 2008, 2010, 2012, 2013, 2015 - 2022, x86 и x64 <br>
           <br>Интегрированы Framework 4.8, 4.7.2 <br>
