--- a/Windows-8-0-сборки.html
+++ b/Windows-8-0-сборки.html
@@ -103,7 +103,7 @@
       <div class="u-clearfix u-sheet u-valign-middle-xs u-sheet-1">
         <h1 class="u-text u-text-default u-text-1">Сборки Windows 8.0<br>
         </h1>
-        <h6 class="u-text u-text-default u-text-2">Windows 8.0 V2 by Adderly (23.06.2022)<br>
+        <h6 class="u-text u-text-default u-text-2">Windows 8.0 by Adderly (23.06.2022)<br>
         </h6>
         <img class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-image u-image-default u-preserve-proportions u-image-1" src="images/Windows10x64-2022-06-23-19-19-38.png" alt="" data-image-width="1366" data-image-height="768">
         <img class="u-image u-image-default u-preserve-proportions u-image-2" src="images/Windows10x64-2022-06-23-19-21-17.png" alt="" data-image-width="1366" data-image-height="768">
