--- a/Windows-11-сборки.html
+++ b/Windows-11-сборки.html
@@ -103,12 +103,25 @@
       <div class="u-clearfix u-sheet u-sheet-1">
         <h1 class="u-text u-text-default u-text-1">Сборки Windows 11<br>
         </h1>
-        <h1 class="u-align-center u-text u-text-default u-text-2">Скоро...<br>Уже в планах на эту неделю!
-        </h1>
-        <p class="u-text u-text-default u-text-3">Смотрите так же:</p>
-        <a href="Windows-10-сборки.html" data-page-id="479509282" class="u-btn u-button-style u-btn-1">Сборки Windows 10</a>
-        <a href="Windows-8-1-сборки.html" data-page-id="284724531" class="u-btn u-button-style u-btn-2">Сборки Windows 8.1</a>
-        <a href="Windows-7-сборки.html" data-page-id="95331361" class="u-btn u-button-style u-btn-3">Сборки Windows 7</a>
+        <h1 class="u-align-center u-text u-text-default u-text-2">Уже сегодня!</h1>
+        <p class="u-text u-text-3"> Добавлена папка "от Марка Аддерли", в которой находятся инсталяторы полезных и авторских программ,<br>а так же рег файлы, чтобы вернуть старый просмотрщик фото. <br>А так же, чтобы отключать и включать обновления. <br>
+          <br> Очищен WinSXS <br>
+          <br>Удалены из автозагрузки "Security Health Check и One Drive" <br>
+          <br>Удалены приложения<br>"Zune, Your Phone, Xbox Speech To Text, Sound Recorder, Карты,<br>Центр отзывов, Почта, Люди, Камера, Sticky Notes, Microsoft Solitaire Collection,<br>Office Hub, Get Started, Get Help, Погода, Новости, Microsoft To Do"<br>
+          <br> Удален OneDrive<br>
+          <br>Интегрированы Microsoft Visual Studio Redistributable 2005, 2008, 2010, 2012, 2013, 2015 - 2022, x86 и x64 <br>
+          <br>Интегрированы Framework 4.8, 4.7.2, 3.5, 3.0, 2.0<br>
+          <br>Включён DirectPlay <br>
+          <br>Отключён Windows Media Player <br>(по желанию можно вернуть) <br>
+          <br>Добавлен диспетчер задач в ПКМ по рабочему столу (по желанию можно выключить)<br>
+          <br>Образ весит x.xx GB, после установки Windows занимает xx GB<br>
+          <br>Образ основан на официальном MSDN Windows 11 21H2 (22000.132)<br>(Основана на старой, чтобы вы обновились сами. Сделано это для того, чтобы работали параметры реестра для того, чтобы обойти проверку.)
+        </p>
+        <a href="Как-обойти-проверку-Windows-11.html" data-page-id="89124304" class="u-border-none u-btn u-btn-round u-button-style u-palette-2-base u-radius-50 u-btn-1">Как обойти проверку Windows 11</a>
+        <p class="u-text u-text-default u-text-4">Смотрите так же:</p>
+        <a href="Windows-10-сборки.html" data-page-id="479509282" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-2">Сборки Windows 10</a>
+        <a href="Windows-8-1-сборки.html" data-page-id="284724531" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-3">Сборки Windows 8.1</a>
+        <a href="Windows-7-сборки.html" data-page-id="95331361" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-4">Сборки Windows 7</a>
       </div>
     </section>
     
