--- a/Windows-8-0-сборки.html
+++ b/Windows-8-0-сборки.html
@@ -111,11 +111,12 @@
         <img class="u-image u-image-default u-preserve-proportions u-image-4" src="images/Windows10x64-2022-06-23-19-20-02.png" alt="" data-image-width="1366" data-image-height="768">
         <img class="u-image u-image-default u-preserve-proportions u-image-5" src="images/Windows10x64-2022-06-23-19-19-47.png" alt="" data-image-width="1366" data-image-height="768">
         <img class="u-image u-image-default u-preserve-proportions u-image-6" src="images/Windows10x64-2022-06-23-19-22-40.png" alt="" data-image-width="1366" data-image-height="768">
-        <p class="u-text u-text-default u-text-3"> Сборка обновлена до последних обновлений, актуальных на Июнь 2022 года.<br>(Последние 30 обновлений можно установить по желанию)<br>
+        <p class="u-align-left-lg u-align-left-md u-align-left-sm u-align-left-xs u-text u-text-default u-text-3"> Сборка обновлена до последних обновлений, актуальных на Июнь 2022 года.<br>(Последние 30 обновлений можно установить по желанию)<br>
           <br>Добавлена папка KMS <br>
           <br>Добавлена папка "от Марка Аддерли" в которой находятся инсталяторы самых нужных программ <br>
           <br>Интегрирован Framework 4.6<br>
-          <br>Интегрированы Microsoft Visual C++ Redistributable 2005, 2008, 2010, 2012, 2013, 2015 - 2022. x86 и, x64 <br>
+          <br>Интегрированы Microsoft Visual C++ Redistributable 2005, 2008, 2010, 2012, 2013, 2015 - 2022. x86 и, x64&nbsp;<br>
+          <br> Отключен Internet Explorer<br>Отключен Media Player<br>(по желанию можно вернуть)<br>
           <br>Добавлены темы "Архитектура, Персонажи, Лашдафт" из Windows 7 <br>
           <br>Добавлены темы с обоями рабочего стола из Windows Vista, 7, 8.1, 10, 11<br>
           <br>Добавлены темы с обоями из экрана блокировки Windows 8 и Windows 10 <br>
@@ -126,9 +127,9 @@
         <a href="https://drive.google.com/file/d/1Z6vhjx2qBIkjqvnyAyKs1BJYzWfmdr1_/view?usp=sharing" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-hover-palette-2-base u-radius-50 u-btn-1">Скачать Windows 8.0 by Adderly</a>
         <a href="https://www.mediafire.com/file/cuh34ijtc2se6iz/Windows+8.0+by+Adderly.iso/file" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-hover-black u-radius-50 u-btn-2">Альтернативная ссылка</a>
         <p class="u-text u-text-default u-text-4">Смотрите так же:</p>
-        <a href="Windows-10-сборки.html" data-page-id="479509282" class="u-btn u-button-style u-btn-3">Сборки Windows 10</a>
-        <a href="Windows-8-1-сборки.html" data-page-id="284724531" class="u-btn u-button-style u-btn-4">Сборки Windows 8.1</a>
-        <a href="Windows-7-сборки.html" data-page-id="95331361" class="u-btn u-button-style u-btn-5">Сборки Windows 7</a>
+        <a href="Windows-10-сборки.html" data-page-id="479509282" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-3">Сборки Windows 10</a>
+        <a href="Windows-8-1-сборки.html" data-page-id="284724531" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-4">Сборки Windows 8.1</a>
+        <a href="Windows-7-сборки.html" data-page-id="95331361" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-5">Сборки Windows 7</a>
       </div>
     </section>
     
