--- a/Windows-8-1-сборки.html
+++ b/Windows-8-1-сборки.html
@@ -102,7 +102,7 @@
     <section class="u-clearfix u-grey-90 u-section-1" id="sec-b057">
       <div class="u-clearfix u-sheet u-sheet-1">
         <h1 class="u-text u-text-default u-text-1">Сборки Windows 8.1</h1>
-        <h6 class="u-text u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-text-2">Windows 8.1 V2 by Adderly (10.06.2022)<br>
+        <h6 class="u-text u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-text-2">Windows 8.1 V3 by Adderly (24.06.2022)<br>
         </h6>
         <img class="u-image u-image-default u-image-1" src="images/photo_2022-06-10_23-18-31.jpg" alt="" data-image-width="1280" data-image-height="719">
         <img class="u-image u-image-default u-image-2" src="images/photo_2022-06-10_23-18-314.jpg" alt="" data-image-width="1280" data-image-height="719">
@@ -110,13 +110,15 @@
         <img class="u-image u-image-default u-image-4" src="images/photo_2022-06-10_23-18-313.jpg" alt="" data-image-width="1280" data-image-height="719">
         <p class="u-text u-text-default u-text-3"> Сборка обновлена до Update 3 <br>
           <br>Добавлена папка KMS <br>
-          <br>Добавлена папка "от Марка Аддерли" в которой находятся инсталяторы самых нужных и авторских программ <br>
-          <br>Интегрирован Framework 4.7.2 <br>
-          <br>Интегрированы Microsoft Visual C++ Redistributable 2005, 2008, 2010, 2012, 2013, 2015 - 2022. x86 и, x64 <br>
+          <br>Добавлена папка "от Марка Аддерли" в которой находятся инсталяторы самых нужных и авторских программ<br>
+          <br>Удалены приложения<br>"Финансы, Еда и напитки, Здоровье и фитнесс, Карты, Новости,<br>Спорт, Путешествия, Погода, Помощь и подсказки, Ридер, Скайп, Будильник,<br>Запись звука, Xbox Live Games, Zune, Сканер, Почта, Люди"&nbsp;<br>
+          <br>Интегрирован Framework 4.8, 4.7.2, 3.0, 2.0<br>
+          <br>Интегрированы Microsoft Visual C++ Redistributable 2005, 2008, 2010, 2012, 2013, 2015 - 2022. x86 и, x64&nbsp;<br>
+          <br>Включен Direct PLay<br>&nbsp;<br>Отключен Internet Explorer<br>Отключен Media Player<br>(по желанию можно вернуть)<br>
           <br>Добавлены темы "Архитектура, Персонажи, Лашдафты" из Windows 7 <br>
-          <br>Добавлены темы с обоями рабочего стола из Windows Vista, 7, 8.0, 10 <br>
+          <br>Добавлены темы с обоями рабочего стола из Windows Vista, 7, 8.0, 10, 11<br>
           <br>Добавлены темы с обоями из экрана блокировки Windows 8 и Windows 10 <br>
-          <br>Добавлен диспетчер задач в ПКМ по рабочему столу <br>
+          <br>Добавлен диспетчер задач в ПКМ по рабочему столу (по желанию можно отключить)<br>
           <br>Удалены файлы гибернации, и файла подкачки <br>
           <br>Ключ - GCRJD-8NW9H-F2CDX-CCM8D-9D6T9 <br>
           <br>Образ весит 4.74 GB, после установки Windows занимает 15 GB. <br>
@@ -125,9 +127,9 @@
         <a href="https://drive.google.com/file/d/1n5snBowFHWvQDoxpNV2G1GPa_RHGzmVX/view?usp=sharing" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-hover-palette-2-base u-radius-50 u-btn-1">Скачать Windows 8.1 V2 by Adderly</a>
         <a href="http://www.mediafire.com/file/a9wo007m4w5qlf2/Windows_8.1_V2_by_Adderly.iso" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-hover-black u-radius-50 u-btn-2">Альтернативная ссылка</a>
         <p class="u-text u-text-default u-text-4">Смотрите так же:</p>
-        <a href="Windows-10-сборки.html" data-page-id="479509282" class="u-btn u-button-style u-btn-3">Сборки Windows 10</a>
-        <a href="Windows-8-0-сборки.html" data-page-id="256727684" class="u-btn u-button-style u-btn-4">Сборки Windows 8.0</a>
-        <a href="Windows-7-сборки.html" data-page-id="95331361" class="u-btn u-button-style u-btn-5">Сборки Windows 7</a>
+        <a href="Windows-10-сборки.html" data-page-id="479509282" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-3">Сборки Windows 10</a>
+        <a href="Windows-8-0-сборки.html" data-page-id="256727684" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-4">Сборки Windows 8.0</a>
+        <a href="Windows-7-сборки.html" data-page-id="95331361" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-5">Сборки Windows 7</a>
       </div>
     </section>
     
