--- a/Windows-7-сборки.html
+++ b/Windows-7-сборки.html
@@ -125,8 +125,9 @@
         <a href="https://drive.google.com/file/d/1qijTiQv1ZGjT_A3ubJtlxBLZw50I4W2x/" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-hover-palette-2-base u-radius-50 u-btn-1">Скачать Windows 7 V2 by Adderly</a>
         <a href="http://www.mediafire.com/file/21quihilqhtkr5q/Windows_7_V2_by_Adderly.iso" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-hover-black u-radius-50 u-btn-2">Альтернативная ссылка</a>
         <p class="u-text u-text-default u-text-4">Смотрите так же:</p>
-        <a href="Windows-8-1-сборки.html" data-page-id="284724531" class="u-btn u-button-style u-btn-3">Сборки Windows 8.1</a>
-        <a href="Windows-10-сборки.html" data-page-id="479509282" class="u-btn u-button-style u-btn-4">Сборки Windows 10</a>
+        <a href="Windows-8-1-сборки.html" data-page-id="284724531" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-3">Сборки Windows 8.1</a>
+        <a href="Windows-8-0-сборки.html" data-page-id="256727684" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-4">Сборки Windows 8.0</a>
+        <a href="Windows-10-сборки.html" data-page-id="479509282" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-5">Сборки Windows 10</a>
       </div>
     </section>
     
