--- a/Windows-11-сборки.html
+++ b/Windows-11-сборки.html
@@ -103,7 +103,7 @@
       <div class="u-clearfix u-sheet u-sheet-1">
         <h1 class="u-text u-text-default u-text-1">Сборки Windows 11<br>
         </h1>
-        <h1 class="u-align-center u-text u-text-default u-text-2">Уже сегодня!</h1>
+        <h1 class="u-align-center u-text u-text-default u-text-2">Уже до конца недели!</h1>
         <p class="u-text u-text-3"> Добавлена папка "от Марка Аддерли", в которой находятся инсталяторы полезных и авторских программ,<br>а так же рег файлы, чтобы вернуть старый просмотрщик фото. <br>А так же, чтобы отключать и включать обновления. <br>
           <br> Очищен WinSXS <br>
           <br>Удалены из автозагрузки "Security Health Check и One Drive" <br>
