--- a/Windows-10-сборки.html
+++ b/Windows-10-сборки.html
@@ -100,7 +100,7 @@
         </nav>
       </div></header>
     <section class="u-clearfix u-grey-90 u-section-1" id="sec-795a">
-      <div class="u-clearfix u-sheet u-sheet-1">
+      <div class="u-clearfix u-sheet u-valign-middle-lg u-sheet-1">
         <h1 class="u-text u-text-default u-text-1">Сборки Windows 10<br>
         </h1>
         <h6 class="u-text u-text-default u-text-2">Windows 10 21H2 by Adderly (21.06.2022)<br>
@@ -137,25 +137,10 @@
           <br>Образ основан на официальном MSDN Windows 10 1607 (Anniversary Update)
         </p>
         <a href="https://drive.google.com/file/d/1KKx6f_0_EBnR0iRaWFiJcDYuFoDqBvke/view?usp=sharing" class="u-active-palette-3-base u-border-none u-btn u-btn-round u-button-style u-hover-palette-2-base u-radius-50 u-btn-2">Скачать Windows 10 1607 by Adderly</a>
-        <h6 class="u-text u-text-default u-text-6">Windows 10 1709 by Adderly (22.06.2022)</h6>
-        <img class="u-expanded-width-xs u-image u-image-default u-image-9" src="images/Windows10x64-2022-06-22-21-41-26.png" alt="" data-image-width="1366" data-image-height="768">
-        <img class="u-expanded-width-xs u-image u-image-default u-image-10" src="images/Windows10x64-2022-06-22-21-41-54.png" alt="" data-image-width="1366" data-image-height="768">
-        <img class="u-expanded-width u-image u-image-default u-image-11" src="images/Windows10x64-2022-06-22-21-41-11.png" alt="" data-image-width="1366" data-image-height="768">
-        <p class="u-align-left u-text u-text-default u-text-7"> Добавлена папка "от Марка Аддерли", в которой находятся рег файлы,<br>чтобы редактировать проводник и вернуть старый просмотрщик фото. <br>А так же, чтобы отключать и включать обновления. <br>
-          <br>Удалены все UWP приложения, кроме калькулятора, часов, и фотографий <br>
-          <br>Удалён OneDrive из автозагрузки <br>
-          <br>Интегрированы Microsoft Visual Studio Redistributable 2005, 2008, 2010, 2012, 2013, x86 и x64<br>(Докачать можно на сайте, я не добавлял чтобы меньше весил)&nbsp;<br>
-          <br>Интегрирован Framework 4.7.2 <br>
-          <br>Образ весит 4 GB, после установки Windows занимает 8.68 GB <br>
-          <br>Образ основан на официальном MSDN Windows 10 1709 (Fall Creators Update)<br>
-          <br>В этой сборке нет инсталяторов программ, и обоев.<br>
-          <br>Проверена на слабом ПК, отлично оптимизирована.
-        </p>
-        <a href="https://drive.google.com/file/d/1HAlkL0G0b92L0XEAlYZCocXKUHRMaYD0/view?usp=sharing" class="u-active-palette-3-base u-border-none u-btn u-btn-round u-button-style u-hover-palette-2-base u-radius-50 u-btn-3">Скачать Windows 10 1709 by Adderly</a>
-        <p class="u-text u-text-default u-text-8">Смотрите так же:</p>
-        <a href="Windows-11-сборки.html" data-page-id="54493442" class="u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-4">Сборки Windows 11</a>
-        <a href="Windows-8-1-сборки.html" data-page-id="284724531" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-5">Сборки Windows 8.1</a>
-        <a href="Windows-7-сборки.html" data-page-id="95331361" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-6">Сборки Windows 7</a>
+        <p class="u-text u-text-default u-text-6">Смотрите так же:</p>
+        <a href="Windows-11-сборки.html" data-page-id="54493442" class="u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-3">Сборки Windows 11</a>
+        <a href="Windows-8-1-сборки.html" data-page-id="284724531" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-4">Сборки Windows 8.1</a>
+        <a href="Windows-7-сборки.html" data-page-id="95331361" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-5">Сборки Windows 7</a>
       </div>
     </section>
     
