--- a/Windows-Lite-сборки.html
+++ b/Windows-Lite-сборки.html
@@ -43,7 +43,7 @@
     ".replace(/gascript/g, 'script'));
     }
     </script></head>
-  <body class="u-body u-xl-mode"><header class="u-clearfix u-grey-70 u-header u-header" id="sec-c15b"><div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-sheet-1">
+  <body class="u-body u-xl-mode"><header class="u-clearfix u-grey-70 u-header u-sticky u-header" id="sec-c15b"><div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-sheet-1">
         <p class="u-enable-responsive u-text u-text-default u-text-1">
           <a class="u-btn u-button-link u-button-style u-none u-text-body-alt-color u-btn-1" href="Сборки-от-Аддерли.html" data-page-id="25875748">Сборки от Аддерли</a>
         </p>
@@ -117,7 +117,7 @@
           <br>В этой сборке нет инсталяторов программ, и обоев.<br>
           <br>Проверена на слабом ПК, отлично оптимизирована.
         </p>
-        <a href="https://drive.google.com/file/d/1HAlkL0G0b92L0XEAlYZCocXKUHRMaYD0/view?usp=sharing" class="u-active-palette-3-base u-border-none u-btn u-btn-round u-button-style u-hover-palette-2-base u-radius-50 u-btn-1">Скачать Windows 10 1709 by Adderly</a>
+        <a href="https://drive.google.com/file/d/1HAlkL0G0b92L0XEAlYZCocXKUHRMaYD0/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hover-custom-color-5 u-palette-1-base u-radius-50 u-btn-1">Скачать Windows 10 1709 by Adderly</a>
         <p class="u-text u-text-default u-text-4">Смотрите так же:</p>
         <a href="Windows-10-сборки.html" data-page-id="479509282" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-2">Сборки Windows 10</a>
         <a href="Windows-8-0-сборки.html" data-page-id="256727684" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-3">Сборки Windows 8.0</a>
