--- a/Windows-8-0-сборки.html
+++ b/Windows-8-0-сборки.html
@@ -43,7 +43,7 @@
     ".replace(/gascript/g, 'script'));
     }
     </script></head>
-  <body class="u-body u-xl-mode"><header class="u-clearfix u-grey-70 u-header u-header" id="sec-c15b"><div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-sheet-1">
+  <body class="u-body u-xl-mode"><header class="u-clearfix u-grey-70 u-header u-sticky u-header" id="sec-c15b"><div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-sheet-1">
         <p class="u-enable-responsive u-text u-text-default u-text-1">
           <a class="u-btn u-button-link u-button-style u-none u-text-body-alt-color u-btn-1" href="Сборки-от-Аддерли.html" data-page-id="25875748">Сборки от Аддерли</a>
         </p>
@@ -124,8 +124,8 @@
           <br>Образ весит 5.83 GB, после установки Windows занимает 17 GB. (Так как установлены почти все обновления)<br>
           <br>Образ основан на официальном MSDN Windows 8.0.
         </p>
-        <a href="https://drive.google.com/file/d/1Z6vhjx2qBIkjqvnyAyKs1BJYzWfmdr1_/view?usp=sharing" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-hover-palette-2-base u-radius-50 u-btn-1">Скачать Windows 8.0 by Adderly</a>
-        <a href="https://www.mediafire.com/file/cuh34ijtc2se6iz/Windows+8.0+by+Adderly.iso/file" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-hover-black u-radius-50 u-btn-2">Альтернативная ссылка</a>
+        <a href="https://drive.google.com/file/d/1Z6vhjx2qBIkjqvnyAyKs1BJYzWfmdr1_/view?usp=sharing" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-14 u-hover-custom-color-15 u-radius-50 u-btn-1">Скачать Windows 8.0 by Adderly</a>
+        <a href="https://www.mediafire.com/file/cuh34ijtc2se6iz/Windows+8.0+by+Adderly.iso/file" class="u-active-grey-50 u-border-none u-btn u-btn-round u-button-style u-hover-black u-radius-50 u-btn-2">Альтернативная ссылка</a>
         <p class="u-text u-text-default u-text-4">Смотрите так же:</p>
         <a href="Windows-10-сборки.html" data-page-id="479509282" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-3">Сборки Windows 10</a>
         <a href="Windows-8-1-сборки.html" data-page-id="284724531" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-4">Сборки Windows 8.1</a>
