--- a/Windows-8-1-сборки.html
+++ b/Windows-8-1-сборки.html
@@ -43,7 +43,7 @@
     ".replace(/gascript/g, 'script'));
     }
     </script></head>
-  <body class="u-body u-xl-mode"><header class="u-clearfix u-grey-70 u-header u-header" id="sec-c15b"><div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-sheet-1">
+  <body class="u-body u-xl-mode"><header class="u-clearfix u-grey-70 u-header u-sticky u-header" id="sec-c15b"><div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-sheet-1">
         <p class="u-enable-responsive u-text u-text-default u-text-1">
           <a class="u-btn u-button-link u-button-style u-none u-text-body-alt-color u-btn-1" href="Сборки-от-Аддерли.html" data-page-id="25875748">Сборки от Аддерли</a>
         </p>
@@ -124,7 +124,7 @@
           <br>Образ весит 4.74 GB, после установки Windows занимает 15 GB. <br>
           <br>Образ основан на официальном MSDN Windows 8.1.
         </p>
-        <a href="https://drive.google.com/file/d/1n5snBowFHWvQDoxpNV2G1GPa_RHGzmVX/view?usp=sharing" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-hover-palette-2-base u-radius-50 u-btn-1">Скачать Windows 8.1 V2 by Adderly</a>
+        <a href="https://drive.google.com/file/d/1n5snBowFHWvQDoxpNV2G1GPa_RHGzmVX/view?usp=sharing" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-13 u-hover-custom-color-14 u-radius-50 u-btn-1">Скачать Windows 8.1 V2 by Adderly</a>
         <a href="http://www.mediafire.com/file/a9wo007m4w5qlf2/Windows_8.1_V2_by_Adderly.iso" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-hover-black u-radius-50 u-btn-2">Альтернативная ссылка</a>
         <p class="u-text u-text-default u-text-4">Смотрите так же:</p>
         <a href="Windows-10-сборки.html" data-page-id="479509282" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-3">Сборки Windows 10</a>
